# garmininsights

./: .env.example  .gitignore  HANDOVER.md  drizzle.config.ts  middleware.ts  package.json  pnpm-lock.yaml  pyproject.toml  vercel.ts
api/py/: _crypto.py  _garth_client.py  _persist.py  _token_store.py  connect.py  ingest.py  requirements.txt
app/: globals.css  layout.tsx
app/connect/: page.tsx
app/forbidden/: page.tsx
app/sleep/: page.tsx
app/today/: page.tsx
app/training/: page.tsx
app/training/[activityId]/: page.tsx
app/wellness/: page.tsx
components/cards/: delta-badge.tsx  hero-number.tsx  metric-card.tsx  status-pill.tsx  sync-button.tsx
components/charts/: body-battery-curve.tsx  consistency-heatmap.tsx  hr-zones-bar.tsx  sleep-stages-bar.tsx  trend-line.tsx  weekly-load-bar.tsx
components/nav/: side-nav.tsx
components/theme/: metric-colors.ts
db/: index.ts  schema.ts
db/queries/: sleep.ts  today.ts  training.ts  wellness.ts
docs/superpowers/plans/: 2026-06-30-garmin-personal-platform.md  2026-07-01-garmin-connect-page.md  2026-07-02-ui-insight-layer.md
docs/superpowers/specs/: 2026-07-01-garmin-connect-page-design.md  (+2 more)
drizzle/: 0000_safe_stick.sql  0001_glorious_makkari.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
lib/: dates.ts  env.ts  format.ts
lib/insights/: baseline.ts  hr-zones.ts  targets.ts  zones.ts
scripts/: bootstrap_garmin.py
tests/py/: conftest.py  test_connect.py  test_persist.py  test_token_store.py
tests/ts/: baseline.test.ts  format.test.ts  hr-zones.test.ts  zones.test.ts
(+7 files in other folders)
